// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Align Panel Component Tests should default collapse panel 1`] = `
<DocumentFragment>
  <div
    class="ant-collapse ant-collapse-icon-position-start ant-collapse-borderless antv-s2-reset-group antv-s2-text-align-panel css-dev-only-do-not-override-3rel02"
  >
    <div
      class="ant-collapse-item antv-s2-reset-group-panel"
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        class="ant-collapse-header"
        role="button"
        tabindex="0"
      >
        <div
          class="ant-collapse-expand-icon"
        >
          <span
            aria-label="caret-right"
            class="anticon anticon-caret-right ant-collapse-arrow"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="caret-right"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M715.8 493.5L335 165.1c-14.2-12.2-35-1.2-35 18.5v656.8c0 19.7 20.8 30.7 35 18.5l380.8-328.4c10.9-9.4 10.9-27.6 0-37z"
              />
            </svg>
          </span>
        </div>
        <span
          class="ant-collapse-header-text"
        >
          文字对齐
        </span>
        <div
          class="ant-collapse-extra"
        >
          <span
            class="antv-s2-reset-btn"
          >
            <span
              aria-label="reload"
              class="anticon anticon-reload antv-s2-reset-btn-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="reload"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M909.1 209.3l-56.4 44.1C775.8 155.1 656.2 92 521.9 92 290 92 102.3 279.5 102 511.5 101.7 743.7 289.8 932 521.9 932c181.3 0 335.8-115 394.6-276.1 1.5-4.2-.7-8.9-4.9-10.3l-56.7-19.5a8 8 0 00-10.1 4.8c-1.8 5-3.8 10-5.9 14.9-17.3 41-42.1 77.8-73.7 109.4A344.77 344.77 0 01655.9 829c-42.3 17.9-87.4 27-133.8 27-46.5 0-91.5-9.1-133.8-27A341.5 341.5 0 01279 755.2a342.16 342.16 0 01-73.7-109.4c-17.9-42.4-27-87.4-27-133.9s9.1-91.5 27-133.9c17.3-41 42.1-77.8 73.7-109.4 31.6-31.6 68.4-56.4 109.3-73.8 42.3-17.9 87.4-27 133.8-27 46.5 0 91.5 9.1 133.8 27a341.5 341.5 0 01109.3 73.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.6 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c-.1-6.6-7.8-10.3-13-6.2z"
                />
              </svg>
            </span>
            <span
              class="antv-s2-reset-btn-text"
            >
              重置
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Text Align Panel Component Tests should render correctly panel 1`] = `
<DocumentFragment>
  <div
    class="ant-collapse ant-collapse-icon-position-start ant-collapse-borderless antv-s2-reset-group antv-s2-text-align-panel css-dev-only-do-not-override-3rel02"
  >
    <div
      class="ant-collapse-item ant-collapse-item-active antv-s2-reset-group-panel"
    >
      <div
        aria-disabled="false"
        aria-expanded="true"
        class="ant-collapse-header"
        role="button"
        tabindex="0"
      >
        <div
          class="ant-collapse-expand-icon"
        >
          <span
            aria-label="caret-right"
            class="anticon anticon-caret-right ant-collapse-arrow"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="caret-right"
              fill="currentColor"
              focusable="false"
              height="1em"
              style="transform: rotate(90deg);"
              viewBox="0 0 1024 1024"
              width="1em"
            >
              <path
                d="M715.8 493.5L335 165.1c-14.2-12.2-35-1.2-35 18.5v656.8c0 19.7 20.8 30.7 35 18.5l380.8-328.4c10.9-9.4 10.9-27.6 0-37z"
              />
            </svg>
          </span>
        </div>
        <span
          class="ant-collapse-header-text"
        >
          文字对齐
        </span>
        <div
          class="ant-collapse-extra"
        >
          <span
            class="antv-s2-reset-btn"
          >
            <span
              aria-label="reload"
              class="anticon anticon-reload antv-s2-reset-btn-icon"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="reload"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M909.1 209.3l-56.4 44.1C775.8 155.1 656.2 92 521.9 92 290 92 102.3 279.5 102 511.5 101.7 743.7 289.8 932 521.9 932c181.3 0 335.8-115 394.6-276.1 1.5-4.2-.7-8.9-4.9-10.3l-56.7-19.5a8 8 0 00-10.1 4.8c-1.8 5-3.8 10-5.9 14.9-17.3 41-42.1 77.8-73.7 109.4A344.77 344.77 0 01655.9 829c-42.3 17.9-87.4 27-133.8 27-46.5 0-91.5-9.1-133.8-27A341.5 341.5 0 01279 755.2a342.16 342.16 0 01-73.7-109.4c-17.9-42.4-27-87.4-27-133.9s9.1-91.5 27-133.9c17.3-41 42.1-77.8 73.7-109.4 31.6-31.6 68.4-56.4 109.3-73.8 42.3-17.9 87.4-27 133.8-27 46.5 0 91.5 9.1 133.8 27a341.5 341.5 0 01109.3 73.8c9.9 9.9 19.2 20.4 27.8 31.4l-60.2 47a8 8 0 003 14.1l175.6 43c5 1.2 9.9-2.6 9.9-7.7l.8-180.9c-.1-6.6-7.8-10.3-13-6.2z"
                />
              </svg>
            </span>
            <span
              class="antv-s2-reset-btn-text"
            >
              重置
            </span>
          </span>
        </div>
      </div>
      <div
        class="ant-collapse-content ant-collapse-content-active"
      >
        <div
          class="ant-collapse-content-box"
        >
          <div
            class="antv-s2-radio-group antv-s2-radio-group-icon-only"
          >
            <span
              class="antv-s2-radio-group-label"
            >
              表头
            </span>
            <span
              class="antv-s2-radio-group-content"
            >
              <div
                class="ant-radio-group ant-radio-group-outline ant-radio-group-small css-dev-only-do-not-override-3rel02"
              >
                <label
                  class="ant-radio-button-wrapper css-dev-only-do-not-override-3rel02"
                >
                  <span
                    class="ant-radio-button"
                  >
                    <input
                      class="ant-radio-button-input"
                      type="radio"
                      value="left"
                    />
                    <span
                      class="ant-radio-button-inner"
                    />
                  </span>
                  <span>
                    <span
                      class="antv-s2-tooltip-wrapper"
                    >
                      <svg
                        class="si"
                        fill="currentColor"
                        height="10px"
                        viewBox="0 0 12 10"
                        width="12px"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          id="设计输出"
                          opacity="0.45"
                          stroke="none"
                          stroke-width="1"
                        >
                          <g
                            fill="#000000"
                            fill-rule="nonzero"
                            id="编组-31"
                            transform="translate(-269.000000, -5288.000000)"
                          >
                            <g
                              transform="translate(127.000000, 4744.000000)"
                            >
                              <g
                                id="编组-16备份"
                                transform="translate(28.000000, 537.000000)"
                              >
                                <g
                                  id="编组-14"
                                  transform="translate(112.000000, 4.000000)"
                                >
                                  <g
                                    id="编组"
                                    transform="translate(2.000000, 3.000000)"
                                  >
                                    <path
                                      d="M11.238,1.045 L0.76,1.045 C0.341,1.045 0,0.81 0,0.522 C0,0.234 0.341,0 0.76,0 L11.24,0 C11.659,0 12,0.234 12,0.522 C11.998,0.812 11.659,1.045 11.238,1.045 Z M7.024,4.03 L0.474,4.03 C0.214,4.03 0,3.795 0,3.507 C0,3.219 0.213,2.985 0.475,2.985 L7.025,2.985 C7.287,2.985 7.5,3.219 7.5,3.507 C7.499,3.795 7.287,4.03 7.024,4.03 L7.024,4.03 Z M7.024,7.015 L0.474,7.015 C0.214,7.015 0,6.781 0,6.493 C0,6.205 0.213,5.97 0.475,5.97 L7.025,5.97 C7.287,5.97 7.5,6.205 7.5,6.493 C7.499,6.782 7.287,7.015 7.024,7.015 L7.024,7.015 Z M11.238,10 L0.76,10 C0.341,10 0,9.766 0,9.478 C0,9.19 0.341,8.955 0.76,8.955 L11.24,8.955 C11.659,8.955 12,9.19 12,9.478 C11.998,9.767 11.659,10 11.238,10 Z"
                                      id="形状"
                                    />
                                  </g>
                                </g>
                              </g>
                            </g>
                          </g>
                        </g>
                      </svg>
                    </span>
                  </span>
                </label>
                <label
                  class="ant-radio-button-wrapper css-dev-only-do-not-override-3rel02"
                >
                  <span
                    class="ant-radio-button"
                  >
                    <input
                      class="ant-radio-button-input"
                      type="radio"
                      value="center"
                    />
                    <span
                      class="ant-radio-button-inner"
                    />
                  </span>
                  <span>
                    <span
                      class="antv-s2-tooltip-wrapper"
                    >
                      <svg
                        class="si"
                        fill="currentColor"
                        height="11px"
                        viewBox="0 0 12 11"
                        width="12px"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          id="设计输出"
                          opacity="0.45"
                          stroke="none"
                          stroke-width="1"
                        >
                          <g
                            fill="#000000"
                            fill-rule="nonzero"
                            id="编组-31"
                            transform="translate(-341.000000, -5352.000000)"
                          >
                            <g
                              transform="translate(127.000000, 4744.000000)"
                            >
                              <g
                                id="编组-16"
                                transform="translate(28.000000, 569.000000)"
                              >
                                <g
                                  id="编组-15"
                                  transform="translate(152.000000, 36.000000)"
                                >
                                  <g
                                    id="编组-33备份"
                                    transform="translate(32.000000, 0.000000)"
                                  >
                                    <g
                                      id="编组"
                                      transform="translate(2.000000, 3.000000)"
                                    >
                                      <path
                                        d="M11.238,4.045 L0.76,4.045 C0.341,4.045 0,3.81 0,3.522 C0,3.234 0.341,3 0.76,3 L11.24,3 C11.659,3 12,3.234 12,3.522 C11.998,3.812 11.659,4.045 11.238,4.045 Z M9.024,1.045 L2.474,1.045 C2.214,1.045 2,0.81 2,0.522 C2,0.234 2.213,0 2.475,0 L9.025,0 C9.287,0 9.5,0.234 9.5,0.522 C9.499,0.81 9.287,1.045 9.024,1.045 L9.024,1.045 Z M9.024,7.045 L2.474,7.045 C2.214,7.045 2,6.81 2,6.522 C2,6.234 2.213,6 2.475,6 L9.025,6 C9.287,6 9.5,6.234 9.5,6.522 C9.499,6.812 9.287,7.045 9.024,7.045 L9.024,7.045 Z M11.238,10.045 L0.76,10.045 C0.341,10.045 0,9.81 0,9.522 C0,9.234 0.341,9 0.76,9 L11.24,9 C11.659,9 12,9.234 12,9.522 C11.998,9.812 11.659,10.045 11.238,10.045 Z"
                                        id="形状"
                                      />
                                    </g>
                                  </g>
                                </g>
                              </g>
                            </g>
                          </g>
                        </g>
                      </svg>
                    </span>
                  </span>
                </label>
                <label
                  class="ant-radio-button-wrapper css-dev-only-do-not-override-3rel02"
                >
                  <span
                    class="ant-radio-button"
                  >
                    <input
                      class="ant-radio-button-input"
                      type="radio"
                      value="right"
                    />
                    <span
                      class="ant-radio-button-inner"
                    />
                  </span>
                  <span>
                    <span
                      class="antv-s2-tooltip-wrapper"
                    >
                      <svg
                        class="si"
                        fill="currentColor"
                        height="10px"
                        viewBox="0 0 12 10"
                        width="12px"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          id="设计输出"
                          opacity="0.45"
                          stroke="none"
                          stroke-width="1"
                        >
                          <g
                            fill="#000000"
                            fill-rule="nonzero"
                            id="编组-31"
                            transform="translate(-333.000000, -5288.000000)"
                          >
                            <g
                              transform="translate(127.000000, 4744.000000)"
                            >
                              <g
                                id="编组-16备份"
                                transform="translate(28.000000, 537.000000)"
                              >
                                <g
                                  id="编组-14"
                                  transform="translate(112.000000, 4.000000)"
                                >
                                  <g
                                    id="编组-32"
                                    transform="translate(64.000000, 0.000000)"
                                  >
                                    <g
                                      id="编组"
                                      transform="translate(2.000000, 3.000000)"
                                    >
                                      <path
                                        d="M0.762,1.045 L11.24,1.045 C11.659,1.045 12,0.81 12,0.522 C12,0.234 11.659,0 11.24,0 L0.76,0 C0.34,0 0,0.234 0,0.522 C0.002,0.812 0.341,1.045 0.762,1.045 Z M4.976,4.03 L11.526,4.03 C11.786,4.03 12,3.795 12,3.507 C12,3.219 11.787,2.985 11.525,2.985 L4.975,2.985 C4.713,2.985 4.5,3.219 4.5,3.507 C4.501,3.795 4.713,4.03 4.976,4.03 Z M4.976,7.015 L11.526,7.015 C11.786,7.015 12,6.781 12,6.493 C12,6.205 11.787,5.97 11.525,5.97 L4.975,5.97 C4.713,5.97 4.5,6.205 4.5,6.493 C4.501,6.782 4.713,7.015 4.976,7.015 Z M0.762,10 L11.24,10 C11.659,10 12,9.766 12,9.478 C12,9.19 11.659,8.955 11.24,8.955 L0.76,8.955 C0.341,8.955 0,9.19 0,9.478 C0.002,9.767 0.341,10 0.762,10 Z"
                                        id="形状"
                                      />
                                    </g>
                                  </g>
                                </g>
                              </g>
                            </g>
                          </g>
                        </g>
                      </svg>
                    </span>
                  </span>
                </label>
              </div>
            </span>
          </div>
          <div
            class="antv-s2-radio-group antv-s2-radio-group-icon-only"
          >
            <span
              class="antv-s2-radio-group-label"
            >
              表身 (维度)
            </span>
            <span
              class="antv-s2-radio-group-content"
            >
              <div
                class="ant-radio-group ant-radio-group-outline ant-radio-group-small css-dev-only-do-not-override-3rel02"
              >
                <label
                  class="ant-radio-button-wrapper ant-radio-button-wrapper-checked css-dev-only-do-not-override-3rel02"
                >
                  <span
                    class="ant-radio-button ant-radio-button-checked"
                  >
                    <input
                      checked=""
                      class="ant-radio-button-input"
                      type="radio"
                      value="left"
                    />
                    <span
                      class="ant-radio-button-inner"
                    />
                  </span>
                  <span>
                    <span
                      class="antv-s2-tooltip-wrapper"
                    >
                      <svg
                        class="si"
                        fill="currentColor"
                        height="10px"
                        viewBox="0 0 12 10"
                        width="12px"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          id="设计输出"
                          stroke="none"
                          stroke-width="1"
                        >
                          <g
                            fill="#3471F9"
                            fill-rule="nonzero"
                            id="编组-31"
                            transform="translate(-309.000000, -5352.000000)"
                          >
                            <g
                              transform="translate(127.000000, 4744.000000)"
                            >
                              <g
                                id="编组-16"
                                transform="translate(28.000000, 569.000000)"
                              >
                                <g
                                  id="编组-15"
                                  transform="translate(152.000000, 36.000000)"
                                >
                                  <g
                                    id="编组"
                                    transform="translate(2.000000, 3.000000)"
                                  >
                                    <path
                                      d="M11.238,1.045 L0.76,1.045 C0.341,1.045 0,0.81 0,0.522 C0,0.234 0.341,0 0.76,0 L11.24,0 C11.659,0 12,0.234 12,0.522 C11.998,0.812 11.659,1.045 11.238,1.045 Z M7.024,4.03 L0.474,4.03 C0.214,4.03 0,3.795 0,3.507 C0,3.219 0.213,2.985 0.475,2.985 L7.025,2.985 C7.287,2.985 7.5,3.219 7.5,3.507 C7.499,3.795 7.287,4.03 7.024,4.03 L7.024,4.03 Z M7.024,7.015 L0.474,7.015 C0.214,7.015 0,6.781 0,6.493 C0,6.205 0.213,5.97 0.475,5.97 L7.025,5.97 C7.287,5.97 7.5,6.205 7.5,6.493 C7.499,6.782 7.287,7.015 7.024,7.015 L7.024,7.015 Z M11.238,10 L0.76,10 C0.341,10 0,9.766 0,9.478 C0,9.19 0.341,8.955 0.76,8.955 L11.24,8.955 C11.659,8.955 12,9.19 12,9.478 C11.998,9.767 11.659,10 11.238,10 Z"
                                      id="形状"
                                    />
                                  </g>
                                </g>
                              </g>
                            </g>
                          </g>
                        </g>
                      </svg>
                    </span>
                  </span>
                </label>
                <label
                  class="ant-radio-button-wrapper css-dev-only-do-not-override-3rel02"
                >
                  <span
                    class="ant-radio-button"
                  >
                    <input
                      class="ant-radio-button-input"
                      type="radio"
                      value="center"
                    />
                    <span
                      class="ant-radio-button-inner"
                    />
                  </span>
                  <span>
                    <span
                      class="antv-s2-tooltip-wrapper"
                    >
                      <svg
                        class="si"
                        fill="currentColor"
                        height="11px"
                        viewBox="0 0 12 11"
                        width="12px"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          id="设计输出"
                          opacity="0.45"
                          stroke="none"
                          stroke-width="1"
                        >
                          <g
                            fill="#000000"
                            fill-rule="nonzero"
                            id="编组-31"
                            transform="translate(-341.000000, -5352.000000)"
                          >
                            <g
                              transform="translate(127.000000, 4744.000000)"
                            >
                              <g
                                id="编组-16"
                                transform="translate(28.000000, 569.000000)"
                              >
                                <g
                                  id="编组-15"
                                  transform="translate(152.000000, 36.000000)"
                                >
                                  <g
                                    id="编组-33备份"
                                    transform="translate(32.000000, 0.000000)"
                                  >
                                    <g
                                      id="编组"
                                      transform="translate(2.000000, 3.000000)"
                                    >
                                      <path
                                        d="M11.238,4.045 L0.76,4.045 C0.341,4.045 0,3.81 0,3.522 C0,3.234 0.341,3 0.76,3 L11.24,3 C11.659,3 12,3.234 12,3.522 C11.998,3.812 11.659,4.045 11.238,4.045 Z M9.024,1.045 L2.474,1.045 C2.214,1.045 2,0.81 2,0.522 C2,0.234 2.213,0 2.475,0 L9.025,0 C9.287,0 9.5,0.234 9.5,0.522 C9.499,0.81 9.287,1.045 9.024,1.045 L9.024,1.045 Z M9.024,7.045 L2.474,7.045 C2.214,7.045 2,6.81 2,6.522 C2,6.234 2.213,6 2.475,6 L9.025,6 C9.287,6 9.5,6.234 9.5,6.522 C9.499,6.812 9.287,7.045 9.024,7.045 L9.024,7.045 Z M11.238,10.045 L0.76,10.045 C0.341,10.045 0,9.81 0,9.522 C0,9.234 0.341,9 0.76,9 L11.24,9 C11.659,9 12,9.234 12,9.522 C11.998,9.812 11.659,10.045 11.238,10.045 Z"
                                        id="形状"
                                      />
                                    </g>
                                  </g>
                                </g>
                              </g>
                            </g>
                          </g>
                        </g>
                      </svg>
                    </span>
                  </span>
                </label>
                <label
                  class="ant-radio-button-wrapper css-dev-only-do-not-override-3rel02"
                >
                  <span
                    class="ant-radio-button"
                  >
                    <input
                      class="ant-radio-button-input"
                      type="radio"
                      value="right"
                    />
                    <span
                      class="ant-radio-button-inner"
                    />
                  </span>
                  <span>
                    <span
                      class="antv-s2-tooltip-wrapper"
                    >
                      <svg
                        class="si"
                        fill="currentColor"
                        height="10px"
                        viewBox="0 0 12 10"
                        width="12px"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          id="设计输出"
                          opacity="0.45"
                          stroke="none"
                          stroke-width="1"
                        >
                          <g
                            fill="#000000"
                            fill-rule="nonzero"
                            id="编组-31"
                            transform="translate(-333.000000, -5288.000000)"
                          >
                            <g
                              transform="translate(127.000000, 4744.000000)"
                            >
                              <g
                                id="编组-16备份"
                                transform="translate(28.000000, 537.000000)"
                              >
                                <g
                                  id="编组-14"
                                  transform="translate(112.000000, 4.000000)"
                                >
                                  <g
                                    id="编组-32"
                                    transform="translate(64.000000, 0.000000)"
                                  >
                                    <g
                                      id="编组"
                                      transform="translate(2.000000, 3.000000)"
                                    >
                                      <path
                                        d="M0.762,1.045 L11.24,1.045 C11.659,1.045 12,0.81 12,0.522 C12,0.234 11.659,0 11.24,0 L0.76,0 C0.34,0 0,0.234 0,0.522 C0.002,0.812 0.341,1.045 0.762,1.045 Z M4.976,4.03 L11.526,4.03 C11.786,4.03 12,3.795 12,3.507 C12,3.219 11.787,2.985 11.525,2.985 L4.975,2.985 C4.713,2.985 4.5,3.219 4.5,3.507 C4.501,3.795 4.713,4.03 4.976,4.03 Z M4.976,7.015 L11.526,7.015 C11.786,7.015 12,6.781 12,6.493 C12,6.205 11.787,5.97 11.525,5.97 L4.975,5.97 C4.713,5.97 4.5,6.205 4.5,6.493 C4.501,6.782 4.713,7.015 4.976,7.015 Z M0.762,10 L11.24,10 C11.659,10 12,9.766 12,9.478 C12,9.19 11.659,8.955 11.24,8.955 L0.76,8.955 C0.341,8.955 0,9.19 0,9.478 C0.002,9.767 0.341,10 0.762,10 Z"
                                        id="形状"
                                      />
                                    </g>
                                  </g>
                                </g>
                              </g>
                            </g>
                          </g>
                        </g>
                      </svg>
                    </span>
                  </span>
                </label>
              </div>
            </span>
          </div>
          <div
            class="antv-s2-radio-group antv-s2-radio-group-icon-only"
          >
            <span
              class="antv-s2-radio-group-label"
            >
              表身 (指标)
            </span>
            <span
              class="antv-s2-radio-group-content"
            >
              <div
                class="ant-radio-group ant-radio-group-outline ant-radio-group-small css-dev-only-do-not-override-3rel02"
              >
                <label
                  class="ant-radio-button-wrapper css-dev-only-do-not-override-3rel02"
                >
                  <span
                    class="ant-radio-button"
                  >
                    <input
                      class="ant-radio-button-input"
                      type="radio"
                      value="left"
                    />
                    <span
                      class="ant-radio-button-inner"
                    />
                  </span>
                  <span>
                    <span
                      class="antv-s2-tooltip-wrapper"
                    >
                      <svg
                        class="si"
                        fill="currentColor"
                        height="10px"
                        viewBox="0 0 12 10"
                        width="12px"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          id="设计输出"
                          opacity="0.45"
                          stroke="none"
                          stroke-width="1"
                        >
                          <g
                            fill="#000000"
                            fill-rule="nonzero"
                            id="编组-31"
                            transform="translate(-269.000000, -5288.000000)"
                          >
                            <g
                              transform="translate(127.000000, 4744.000000)"
                            >
                              <g
                                id="编组-16备份"
                                transform="translate(28.000000, 537.000000)"
                              >
                                <g
                                  id="编组-14"
                                  transform="translate(112.000000, 4.000000)"
                                >
                                  <g
                                    id="编组"
                                    transform="translate(2.000000, 3.000000)"
                                  >
                                    <path
                                      d="M11.238,1.045 L0.76,1.045 C0.341,1.045 0,0.81 0,0.522 C0,0.234 0.341,0 0.76,0 L11.24,0 C11.659,0 12,0.234 12,0.522 C11.998,0.812 11.659,1.045 11.238,1.045 Z M7.024,4.03 L0.474,4.03 C0.214,4.03 0,3.795 0,3.507 C0,3.219 0.213,2.985 0.475,2.985 L7.025,2.985 C7.287,2.985 7.5,3.219 7.5,3.507 C7.499,3.795 7.287,4.03 7.024,4.03 L7.024,4.03 Z M7.024,7.015 L0.474,7.015 C0.214,7.015 0,6.781 0,6.493 C0,6.205 0.213,5.97 0.475,5.97 L7.025,5.97 C7.287,5.97 7.5,6.205 7.5,6.493 C7.499,6.782 7.287,7.015 7.024,7.015 L7.024,7.015 Z M11.238,10 L0.76,10 C0.341,10 0,9.766 0,9.478 C0,9.19 0.341,8.955 0.76,8.955 L11.24,8.955 C11.659,8.955 12,9.19 12,9.478 C11.998,9.767 11.659,10 11.238,10 Z"
                                      id="形状"
                                    />
                                  </g>
                                </g>
                              </g>
                            </g>
                          </g>
                        </g>
                      </svg>
                    </span>
                  </span>
                </label>
                <label
                  class="ant-radio-button-wrapper css-dev-only-do-not-override-3rel02"
                >
                  <span
                    class="ant-radio-button"
                  >
                    <input
                      class="ant-radio-button-input"
                      type="radio"
                      value="center"
                    />
                    <span
                      class="ant-radio-button-inner"
                    />
                  </span>
                  <span>
                    <span
                      class="antv-s2-tooltip-wrapper"
                    >
                      <svg
                        class="si"
                        fill="currentColor"
                        height="11px"
                        viewBox="0 0 12 11"
                        width="12px"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          id="设计输出"
                          opacity="0.45"
                          stroke="none"
                          stroke-width="1"
                        >
                          <g
                            fill="#000000"
                            fill-rule="nonzero"
                            id="编组-31"
                            transform="translate(-341.000000, -5352.000000)"
                          >
                            <g
                              transform="translate(127.000000, 4744.000000)"
                            >
                              <g
                                id="编组-16"
                                transform="translate(28.000000, 569.000000)"
                              >
                                <g
                                  id="编组-15"
                                  transform="translate(152.000000, 36.000000)"
                                >
                                  <g
                                    id="编组-33备份"
                                    transform="translate(32.000000, 0.000000)"
                                  >
                                    <g
                                      id="编组"
                                      transform="translate(2.000000, 3.000000)"
                                    >
                                      <path
                                        d="M11.238,4.045 L0.76,4.045 C0.341,4.045 0,3.81 0,3.522 C0,3.234 0.341,3 0.76,3 L11.24,3 C11.659,3 12,3.234 12,3.522 C11.998,3.812 11.659,4.045 11.238,4.045 Z M9.024,1.045 L2.474,1.045 C2.214,1.045 2,0.81 2,0.522 C2,0.234 2.213,0 2.475,0 L9.025,0 C9.287,0 9.5,0.234 9.5,0.522 C9.499,0.81 9.287,1.045 9.024,1.045 L9.024,1.045 Z M9.024,7.045 L2.474,7.045 C2.214,7.045 2,6.81 2,6.522 C2,6.234 2.213,6 2.475,6 L9.025,6 C9.287,6 9.5,6.234 9.5,6.522 C9.499,6.812 9.287,7.045 9.024,7.045 L9.024,7.045 Z M11.238,10.045 L0.76,10.045 C0.341,10.045 0,9.81 0,9.522 C0,9.234 0.341,9 0.76,9 L11.24,9 C11.659,9 12,9.234 12,9.522 C11.998,9.812 11.659,10.045 11.238,10.045 Z"
                                        id="形状"
                                      />
                                    </g>
                                  </g>
                                </g>
                              </g>
                            </g>
                          </g>
                        </g>
                      </svg>
                    </span>
                  </span>
                </label>
                <label
                  class="ant-radio-button-wrapper ant-radio-button-wrapper-checked css-dev-only-do-not-override-3rel02"
                >
                  <span
                    class="ant-radio-button ant-radio-button-checked"
                  >
                    <input
                      checked=""
                      class="ant-radio-button-input"
                      type="radio"
                      value="right"
                    />
                    <span
                      class="ant-radio-button-inner"
                    />
                  </span>
                  <span>
                    <span
                      class="antv-s2-tooltip-wrapper"
                    >
                      <svg
                        class="si"
                        fill="currentColor"
                        height="10px"
                        viewBox="0 0 12 10"
                        width="12px"
                      >
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          id="设计输出"
                          opacity="1"
                          stroke="none"
                          stroke-width="1"
                        >
                          <g
                            fill="#3471F9"
                            fill-rule="nonzero"
                            id="编组-31"
                            transform="translate(-333.000000, -5288.000000)"
                          >
                            <g
                              transform="translate(127.000000, 4744.000000)"
                            >
                              <g
                                id="编组-16备份"
                                transform="translate(28.000000, 537.000000)"
                              >
                                <g
                                  id="编组-14"
                                  transform="translate(112.000000, 4.000000)"
                                >
                                  <g
                                    id="编组-32"
                                    transform="translate(64.000000, 0.000000)"
                                  >
                                    <g
                                      id="编组"
                                      transform="translate(2.000000, 3.000000)"
                                    >
                                      <path
                                        d="M0.762,1.045 L11.24,1.045 C11.659,1.045 12,0.81 12,0.522 C12,0.234 11.659,0 11.24,0 L0.76,0 C0.34,0 0,0.234 0,0.522 C0.002,0.812 0.341,1.045 0.762,1.045 Z M4.976,4.03 L11.526,4.03 C11.786,4.03 12,3.795 12,3.507 C12,3.219 11.787,2.985 11.525,2.985 L4.975,2.985 C4.713,2.985 4.5,3.219 4.5,3.507 C4.501,3.795 4.713,4.03 4.976,4.03 Z M4.976,7.015 L11.526,7.015 C11.786,7.015 12,6.781 12,6.493 C12,6.205 11.787,5.97 11.525,5.97 L4.975,5.97 C4.713,5.97 4.5,6.205 4.5,6.493 C4.501,6.782 4.713,7.015 4.976,7.015 Z M0.762,10 L11.24,10 C11.659,10 12,9.766 12,9.478 C12,9.19 11.659,8.955 11.24,8.955 L0.76,8.955 C0.341,8.955 0,9.19 0,9.478 C0.002,9.767 0.341,10 0.762,10 Z"
                                        id="形状"
                                      />
                                    </g>
                                  </g>
                                </g>
                              </g>
                            </g>
                          </g>
                        </g>
                      </svg>
                    </span>
                  </span>
                </label>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
